--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,42 +1,34 @@
 .header {
   display: flex;
-  width: 100%;
   justify-content: space-between;
-  height: 52px; 
+  max-width: 1184px;
+  margin: 0 auto 48px;
+  padding-top: 16px;
 }
 
 @media screen and (min-width: 320px) {
   .header {
-    height: 42px;
-    padding: 16px 0 48px; 
-  }
-}
-
-@media screen and (min-width: 425px) {
-  .header {
-    height: 47px; 
-    padding: 22px 0 48px;
+    width: 90%;
   }
 }
 
 @media screen and (min-width: 768px) {
   .header {
-    padding: 28px 0 48px;
+    width: 720px;
+    padding-top: 28px;
   }
 }
 
 @media screen and (min-width: 1024px) {
   .header {
-    padding: 28px 0 48px;
+    width: 928px;
   }
 }
 
 @media screen and (min-width: 1280px) {
   .header {
-    padding: 28px 0 56px;
-    width: calc(100% + 200px);
-    position: relative;
-    left:-100px
+    width: 1184px;
+    margin-bottom: 56px;
   }
 }
   
