--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -4,7 +4,7 @@
   font-style: normal;
   margin-top: 0;
   margin-bottom: 40px;
-  
+  margin-left: 5%;
 }
 
 @media screen and (min-width: 320px) {
@@ -12,7 +12,6 @@
     font-size: 32px;
     line-height: 1.09;
     max-width: 250px;
-    /* уменьшила ширину, чтобы переносилась "не", как в макете */
   }
 }
   
@@ -20,7 +19,7 @@
   .intro__title {
     font-size: 43px;
     line-height: 1.08;
-    max-width: 300px;
+    max-width: 300px
   }
 }
 
@@ -29,12 +28,20 @@
     font-size: 54px;
     line-height: 1.07;
     max-width: 720px;
-    }
+    margin-left: 24px;
   }
+}
     
 @media screen and (min-width: 1024px) {
   .intro__title {
     max-width: 690px;
+    margin-left: 48px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .intro__title {
+    margin-left: 148px;
   }
 }
       
