--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,12 +1,8 @@
 .lead {
   display: flex;
   flex-direction: column;
-}
-
-@media screen and (min-width: 320px) {
-  .lead{
-   margin-bottom: 64px;
-  }
+  max-width: 1280px;
+  margin: 0 auto 64px;
 }
 
 @media screen and (min-width: 425px) {
