--- a/blocks/photo-grid/__item/photo-grid__item.css
+++ b/blocks/photo-grid/__item/photo-grid__item.css
@@ -8,7 +8,7 @@
 @media screen and (min-width: 768px) {
   .photo-grid__item {
       width: 352px;
-      height: 264;
+      height: 264px;
   }
 }
     
