--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,5 +1,7 @@
 .cover {
   display: flex;
+  max-width: 1280px;
+  margin: 0 auto 64px;
   justify-content: center;
   align-items: center;
   background-image: url(../../images/cover-trains.jpg);
@@ -9,45 +11,44 @@
   background-repeat: no-repeat;
 }
 
-@media screen and (min-width: 320px){
-  .cover {
-    width: calc(100% + 32px); 
-    height: calc((100vw + 32px) / 1.6);
-    left:-16px;
-    margin-bottom: 64px;
-  }
+.cover::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color:  #2A2C2F;
+  opacity: 0.3;
+  transition: opacity .3s;
 }
 
-@media screen and (min-width: 425px) {
+.cover:hover::before {
+  opacity: 0.8;
+}
+
+@media screen and (min-width: 320px){
   .cover {
-    width: calc(100% + 40px); 
-    height: calc((100vw + 40px) / 1.6);
-    left:-20px;
+    width: 100vw; 
+    height: calc(100vw / 1.6);  
   }
 }
    
 @media screen and (min-width: 768px) {
   .cover {
-    width: calc(100% + 48px); 
-    height: calc((100vw + 48px) / 1.6);
-    left:-24px;
     margin-bottom: 88px;
   }
 }
 
 @media screen and (min-width: 1024px) {
   .cover {
-    width: calc(100% + 96px); 
-    height: calc((100vw + 96px) / 1.6);
-    left:-48px;
     margin-bottom: 92px;
   }
 }
 
 @media screen and (min-width: 1280px) {
   .cover { 
-    width: calc(100% + 200px); 
-    height: calc((100vw + 200px) / 1.6);
-    left:-100px 
+    width: 1184px; 
+    height: 740px;  
   } 
 }
