--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,5 +1,5 @@
 .footer {
-  width: 100%;
+  max-width: 1184px;
   display: flex;
   justify-content: space-between;
   padding-bottom: 24px;
@@ -8,11 +8,22 @@
 @media screen and (min-width: 320px) {
   .footer { 
     flex-direction: column;
+    width: 186px;
+    margin-left: 16px;
   }
 }
 
 @media screen and (min-width: 768px) {
   .footer { 
     flex-direction: row;
+    width: 720px;
+    margin: 0 auto;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .footer { 
+    flex-direction: row;
+    width: 928px;
   }
 }
