--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -7,8 +7,8 @@
 }
 
 .header__lang-link:hover {
-  opacity: 0.5;
-  transition: opacity .3s ease-in;
+  opacity: 0.8;
+  transition: opacity .3s;
 }
 
 @media screen and (min-width: 320px) {
