--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -8,4 +8,23 @@
   padding-left: 0;
   margin-top: 0;
   margin-bottom: 0;
+  margin-left: 5%;
+}
+
+@media screen and (min-width: 768px) {
+  .intro__list {
+    margin-left: 24px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .intro__list {
+    margin-left: 48px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .intro__list {
+    margin-left: 148px;
+  }
 }
