--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -9,3 +9,19 @@
   color: white;
 }
 
+@media screen and (min-width: 320px) {
+  .lead__caption {
+    margin-left: 5%;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .lead__caption {
+    margin-left: 24px;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .lead__caption {
+    margin-left: 0;
+  }
+}
