--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,20 +1,24 @@
 .lead__image {
-  width: 100%;
-  margin: 0 auto 8px;
+  margin: 0 0 8px;
 }
 
-@media screen and (min-width: 320px) and (max-width: 425px) {
+@media screen and (min-width: 320px)  {
   .lead__image {
-    width: calc(100% + 32px);
-    position: relative;
-    left:-16px
+    width: 100vw;
+    height: calc(100vw /1.6);
   }
 }
 
-@media screen and (min-width: 425px) and (max-width: 768px){
+@media screen and (min-width: 1024px)  {
   .lead__image {
-    width: calc(100% + 40px);
-    position: relative;
-    left:-20px
+    width: 928px;
+    height: 580px;
   }
 }
+@media screen and (min-width: 1280px)  {
+  .lead__image {
+    width: 984px;
+    height: 615px;
+  }
+}
+
