--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -3,7 +3,7 @@
   font-style: normal;
   color: white;
   text-align: center;
-  margin:0 auto;
+  margin:16px auto 40px;
 }
 
 @media screen and (min-width: 320px) {
@@ -11,8 +11,6 @@
     font-size: 16px;
     line-height: 1.25;
     max-width: 288px;
-    margin-top: 16px;
-    margin-bottom: 40px;
   }
 }
   
