--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -2,20 +2,10 @@
 grid-area: image;
 }
 
-
-@media screen and (min-width: 320px) and (max-width: 425px) {
+@media screen and (min-width: 320px)  {
   .place__image {
-    width: calc(100% + 32px);
-    position: relative;
-    left:-16px
-  }
-}
-
-@media screen and (min-width: 425px) and (max-width: 768px){
-  .place__image {
-    width: calc(100% + 40px);
-    position: relative;
-    left:-20px
+    width: 320px;
+    height: 320px;
   }
 }
 
