--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -2,21 +2,23 @@
   color: white;
   font-style: normal;
   font-weight: normal;
-  grid-area: paragraph;
   margin-top: 0;
+  margin-bottom: 0;
+}
+
+.place__paragraph:first-of-type {
+  margin-bottom: 24px;
 }
 
 @media screen and (min-width: 320px) {
   .place__paragraph {
     font-size: 16px;
     line-height: 1.63;
-    margin-bottom: -8px;
   }
 }
 
 @media screen and (min-width: 768px) {
   .place__paragraph {
-    margin-bottom: -24px;
   }
 }
 
