--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,16 +1,15 @@
 .place__title {
   grid-area: title;
-  min-width: 288px;
   font-style: normal;
   font-weight: 900;
   color: white;
   text-align: left;
-  margin-top:0;
-  margin-bottom: 0;
+  margin: 0 auto;
 }
 
 @media screen and (min-width: 320px) {
-  place__title {
+  .place__title {
+    width: 288px;
     font-size: 32px;
     line-height: 1.09;
   }
@@ -18,6 +17,7 @@
 
 @media screen and (min-width: 768px) {
   .place__title {
+    width: 340px;
     font-size: 42px;
     line-height: 1.1;
   }
@@ -25,8 +25,15 @@
 
 @media screen and (min-width: 1024px) {
   .place__title {
+    width: 440px;
     font-size: 72px;
     line-height: 1.06;
+  }
+}
+
+  @media screen and (min-width: 1280px) {
+  .place__title {
+    width: 460px;
   }
 }
   
