--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -23,7 +23,12 @@
 
 @media screen and (min-width: 1024px) {
   .footer { 
-    flex-direction: row;
     width: 928px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .footer { 
+    width: 1184px;
   }
 }
