--- a/pages/index.css
+++ b/pages/index.css
@@ -29,6 +29,7 @@
 @import url("../blocks/place/__paragraphs/place__paragraphs.css");
 @import url("../blocks/place/__paragraph/place__paragraph.css");
 @import url("../blocks/cover/cover.css");
+@import url("../blocks/cover/__background/cover__background.css");
 @import url("../blocks/cover/__title/cover__title.css");
 @import url("../blocks/cover/__subtitle/cover__subtitle.css");
 @import url("../blocks/cover/__link/cover__link.css");
